gccida/c2/compare_tree_int
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/compare_tree_int/src/tree.c:4162:17: error: expected expression
if ( *( _OWORD *)&t->block.vars == 0LL 
                ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/compare_tree_int/src/tree.c:4162:9: error: use of undeclared identifier '_OWORD'
if ( *( _OWORD *)&t->block.vars == 0LL 
        ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/compare_tree_int/src/obj/tree.o] Error 1
